# ouijabot

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  words.txt
src/: main.rs  ouija.rs
